# risk-analyzer

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml
backend/: .bashrc  Dockerfile  Dockerfile.worker  entrypoint.sh  pyproject.toml  worker_entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_deleted_at_to_analysis_jobs.py  002_add_edit_session_tables.py  002_add_public_nuisance_category.py  003_add_public_nuisance_category.py  004_add_deleted_at_to_analysis_jobs.py
backend/app/: celery_app.py  config.py  main.py
backend/app/api/routes/: editor.py  jobs.py  videos.py
backend/app/models/: __init__.py  database.py  edit_session.py  job.py
backend/app/schemas/: __init__.py  editor.py  job.py
backend/app/services/: audio_analyzer.py  edit_session.py  export_progress.py  gemini_video_analysis.py  ocr_analyzer.py  old_risk_evaluator.py  orchestrator.py  progress.py  risk_evaluator.py  storage.py  video_analyzer.py  video_editor.py
backend/app/tasks/: analyze.py  export.py
backend/tests/: evaluation_logic.py  test_edit_models.py  test_editor_routes.py  test_editor_schemas.py  test_evaluation.py  test_export_routes.py  test_gcs_storage.py  test_jobs.py  test_progress.py  test_video_editor_service.py  test_videos.py
credentials/: .gitkeep
docs/: deployment-guide.md  development-setup.md  editor-manual-checks.md  gcloud-service-account-setup.md  google-cloud-japan-ai-hackathon-vol4.md  incident-20260211-editor-api.md  screen-list.md  screen.md  screens.md
frontend/: Dockerfile.prod  (+6 more)
(+87 files in other folders)
